// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider snapshot defaultValue 1`] = `
<div
  className="za-slider"
>
  <div
    className="za-slider__content"
  >
    <div
      className="za-slider__line"
    >
      <div
        className="za-slider__line__bg"
        style={
          Object {
            "width": "10%",
          }
        }
      />
    </div>
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="za-slider__handle"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      role="slider"
      style={
        Object {
          "left": "10%",
        }
      }
    >
      <Tooltip
        arrowPointAtCenter={true}
        content={10}
        direction="top"
        hasArrow={true}
        onVisibleChange={[Function]}
        trigger="manual"
        visible={false}
      >
        <div
          className="za-slider__handle__shadow"
        />
      </Tooltip>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot disabled 1`] = `
<div
  className="za-slider za-slider--disabled"
>
  <div
    className="za-slider__content"
  >
    <div
      className="za-slider__line"
    >
      <div
        className="za-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="za-slider__handle"
      role="slider"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <Tooltip
        arrowPointAtCenter={true}
        content={0}
        direction="top"
        hasArrow={true}
        onVisibleChange={[Function]}
        trigger="manual"
        visible={false}
      >
        <div
          className="za-slider__handle__shadow"
        />
      </Tooltip>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot marks 1`] = `
<div
  className="za-slider"
>
  <div
    className="za-slider__content"
  >
    <div
      className="za-slider__line"
    >
      <div
        className="za-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
      <span
        className="za-slider__line__dot za-slider__line__dot--active"
        key="0"
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <span
        className="za-slider__line__dot"
        key="26"
        style={
          Object {
            "left": "26%",
          }
        }
      />
      <span
        className="za-slider__line__dot"
        key="60"
        style={
          Object {
            "left": "60%",
          }
        }
      />
      <span
        className="za-slider__line__dot"
        key="100"
        style={
          Object {
            "left": "100%",
          }
        }
      />
    </div>
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="za-slider__handle"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      role="slider"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <Tooltip
        arrowPointAtCenter={true}
        content={0}
        direction="top"
        hasArrow={true}
        onVisibleChange={[Function]}
        trigger="manual"
        visible={false}
      >
        <div
          className="za-slider__handle__shadow"
        />
      </Tooltip>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot marks error 1`] = `
<div
  className="za-slider za-slider--marked"
>
  <div
    className="za-slider__content"
  >
    <div
      className="za-slider__line"
    >
      <div
        className="za-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="za-slider__handle"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      role="slider"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <Tooltip
        arrowPointAtCenter={true}
        content={0}
        direction="top"
        hasArrow={true}
        onVisibleChange={[Function]}
        trigger="manual"
        visible={false}
      >
        <div
          className="za-slider__handle__shadow"
        />
      </Tooltip>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot max 1`] = `
<div
  className="za-slider"
>
  <div
    className="za-slider__content"
  >
    <div
      className="za-slider__line"
    >
      <div
        className="za-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="za-slider__handle"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      role="slider"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <Tooltip
        arrowPointAtCenter={true}
        content={0}
        direction="top"
        hasArrow={true}
        onVisibleChange={[Function]}
        trigger="manual"
        visible={false}
      >
        <div
          className="za-slider__handle__shadow"
        />
      </Tooltip>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot min 1`] = `
<div
  className="za-slider"
>
  <div
    className="za-slider__content"
  >
    <div
      className="za-slider__line"
    >
      <div
        className="za-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="za-slider__handle"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      role="slider"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <Tooltip
        arrowPointAtCenter={true}
        content={0}
        direction="top"
        hasArrow={true}
        onVisibleChange={[Function]}
        trigger="manual"
        visible={false}
      >
        <div
          className="za-slider__handle__shadow"
        />
      </Tooltip>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot shallows correctly 1`] = `
<div
  className="za-slider"
>
  <div
    className="za-slider__content"
  >
    <div
      className="za-slider__line"
    >
      <div
        className="za-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="za-slider__handle"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      role="slider"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <Tooltip
        arrowPointAtCenter={true}
        content={0}
        direction="top"
        hasArrow={true}
        onVisibleChange={[Function]}
        trigger="manual"
        visible={false}
      >
        <div
          className="za-slider__handle__shadow"
        />
      </Tooltip>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot showMark 1`] = `
<div
  className="za-slider za-slider--marked"
>
  <div
    className="za-slider__content"
  >
    <div
      className="za-slider__line"
    >
      <div
        className="za-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
      <span
        className="za-slider__line__dot za-slider__line__dot--active"
        key="0"
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <span
        className="za-slider__line__dot"
        key="26"
        style={
          Object {
            "left": "26%",
          }
        }
      />
      <span
        className="za-slider__line__dot"
        key="60"
        style={
          Object {
            "left": "60%",
          }
        }
      />
      <span
        className="za-slider__line__dot"
        key="100"
        style={
          Object {
            "left": "100%",
          }
        }
      />
      <div
        className="za-slider__marks"
      >
        <span
          className="za-slider__mark"
          key="0"
          style={
            Object {
              "left": "0%",
            }
          }
        >
          0
        </span>
        <span
          className="za-slider__mark"
          key="26"
          style={
            Object {
              "left": "26%",
            }
          }
        >
          26
        </span>
        <span
          className="za-slider__mark"
          key="60"
          style={
            Object {
              "left": "60%",
            }
          }
        >
          60
        </span>
        <span
          className="za-slider__mark"
          key="100"
          style={
            Object {
              "left": "100%",
            }
          }
        >
          100
        </span>
      </div>
    </div>
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="za-slider__handle"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      role="slider"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <Tooltip
        arrowPointAtCenter={true}
        content={0}
        direction="top"
        hasArrow={true}
        onVisibleChange={[Function]}
        trigger="manual"
        visible={false}
      >
        <div
          className="za-slider__handle__shadow"
        />
      </Tooltip>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot step 1`] = `
<div
  className="za-slider"
>
  <div
    className="za-slider__content"
  >
    <div
      className="za-slider__line"
    >
      <div
        className="za-slider__line__bg"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      className="za-slider__handle"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      role="slider"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <Tooltip
        arrowPointAtCenter={true}
        content={0}
        direction="top"
        hasArrow={true}
        onVisibleChange={[Function]}
        trigger="manual"
        visible={false}
      >
        <div
          className="za-slider__handle__shadow"
        />
      </Tooltip>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot value 1`] = `
<div
  className="za-slider"
>
  <div
    className="za-slider__content"
  >
    <div
      className="za-slider__line"
    >
      <div
        className="za-slider__line__bg"
        style={
          Object {
            "width": "10%",
          }
        }
      />
    </div>
    <div
      aria-orientation="horizontal"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={10}
      className="za-slider__handle"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      role="slider"
      style={
        Object {
          "left": "10%",
        }
      }
    >
      <Tooltip
        arrowPointAtCenter={true}
        content={10}
        direction="top"
        hasArrow={true}
        onVisibleChange={[Function]}
        trigger="manual"
        visible={false}
      >
        <div
          className="za-slider__handle__shadow"
        />
      </Tooltip>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot vertical 1`] = `
<div
  className="za-slider za-slider--vertical"
>
  <div
    className="za-slider__content"
  >
    <div
      className="za-slider__line"
    >
      <div
        className="za-slider__line__bg"
        style={
          Object {
            "height": "0%",
          }
        }
      />
    </div>
    <div
      aria-orientation="vertical"
      aria-valuemax={100}
      aria-valuemin={0}
      className="za-slider__handle"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      role="slider"
      style={
        Object {
          "bottom": "0%",
        }
      }
    >
      <Tooltip
        arrowPointAtCenter={true}
        content={0}
        direction="top"
        hasArrow={true}
        onVisibleChange={[Function]}
        trigger="manual"
        visible={false}
      >
        <div
          className="za-slider__handle__shadow"
        />
      </Tooltip>
    </div>
  </div>
</div>
`;

exports[`Slider snapshot vertical and marks 1`] = `
<div
  className="za-slider za-slider--vertical za-slider--marked"
>
  <div
    className="za-slider__content"
  >
    <div
      className="za-slider__line"
    >
      <div
        className="za-slider__line__bg"
        style={
          Object {
            "height": "0%",
          }
        }
      />
      <span
        className="za-slider__line__dot za-slider__line__dot--active"
        key="0"
        style={
          Object {
            "bottom": "0%",
          }
        }
      />
      <span
        className="za-slider__line__dot"
        key="26"
        style={
          Object {
            "bottom": "26%",
          }
        }
      />
      <span
        className="za-slider__line__dot"
        key="60"
        style={
          Object {
            "bottom": "60%",
          }
        }
      />
      <span
        className="za-slider__line__dot"
        key="100"
        style={
          Object {
            "bottom": "100%",
          }
        }
      />
      <div
        className="za-slider__marks"
      >
        <span
          className="za-slider__mark"
          key="0"
          style={
            Object {
              "bottom": "0%",
            }
          }
        >
          0
        </span>
        <span
          className="za-slider__mark"
          key="26"
          style={
            Object {
              "bottom": "26%",
            }
          }
        >
          26
        </span>
        <span
          className="za-slider__mark"
          key="60"
          style={
            Object {
              "bottom": "60%",
            }
          }
        >
          60
        </span>
        <span
          className="za-slider__mark"
          key="100"
          style={
            Object {
              "bottom": "100%",
            }
          }
        >
          100
        </span>
      </div>
    </div>
    <div
      aria-orientation="vertical"
      aria-valuemax={100}
      aria-valuemin={0}
      className="za-slider__handle"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      role="slider"
      style={
        Object {
          "bottom": "0%",
        }
      }
    >
      <Tooltip
        arrowPointAtCenter={true}
        content={0}
        direction="top"
        hasArrow={true}
        onVisibleChange={[Function]}
        trigger="manual"
        visible={false}
      >
        <div
          className="za-slider__handle__shadow"
        />
      </Tooltip>
    </div>
  </div>
</div>
`;
